kubernetes/opa-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opa-server-service
  labels:
    resource: opa-server
    app: user-register
spec:
  type: ClusterIP
  clusterIP: 10.96.134.82
  selector:
    resource: opa-server
    app: user-register
  ports:
    - name: opa-server
      protocol: TCP
      port: 8181
      targetPort: 8181
