kubernetes/postgres-external-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: postgres
subsets:
  - addresses:
      - ip: 172.17.0.1
    ports:
      - port: 5432
