kubernetes/user-register-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-register-ingress
  labels:
    resource: user-register-app
    app: user-register
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app.user-register
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-register-service
                port:
                  number: 9000
